# brat

./: pyproject.toml
src/brat_annotation_tool/: .gitignore  __init__.py  app.py  config.py  install.sh  start_brat.py  wsgi.py
