[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brat_annotation_tool"
version = "0.0.1"
authors = [
  { name="Goran Topić", email="amadanmath@gmail.com" },
  { name="Sampo Pyysalo", email="sampo.pyysalo@gmail.com" },
  { name="Pontus Stenetorp", email="pontus@stenetorp.se" },
]

description = "brat annotation tool package"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nlplab/brat"

[tool.setuptools.packages.find]
where = ["src/brat_annotation_tool"]

[tool.hatch.build.targets.wheel]
packages = ["src/brat_annotation_tool"]

[tool.hatch.build]
sources = ["src"]
artifacts = [
  "*.svg",
]

[tool.hatch.build.targets.sdist]

exclude = [".github"]

[tool.hatch.build.targets.brat_annotation_tool]
